# planetarium_api_service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
planetarium/: admin.py  models.py  serializers.py  urls.py  views.py
planetarium/migrations/: 0001_initial.py  0002_initial.py  0003_showsession_image.py  0004_astronomyshow_image.py
planetarium/tests/: test_models.py  test_serializers.py  test_views.py
src/: settings.py  urls.py
user/: models.py
user/migrations/: 0001_initial.py
